<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">


    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animationView"
        android:layout_width="368dp"
        android:layout_height="235dp"
        android:layout_marginTop="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.465"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:lottie_autoPlay="true"
        app:lottie_loop="true"
        app:lottie_rawRes="@raw/welcome_lottie"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:layout_marginStart="20dp"
        android:text="@string/welcome_need_information"
        android:textColor="@color/color_1f2024"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/welcome_need_information" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/appCompatTextView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="10dp"
        android:text="@string/welcome_hello"
        android:textColor="@color/color_1f2024"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@id/appCompatTextView1"
        app:layout_constraintStart_toStartOf="parent"
        tools:text="@string/welcome_hello" />

    <androidx.appcompat.widget.AppCompatTextView
        style="@style/ButtonFullGreen"
        android:id="@+id/bt_confirm"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:text="@string/confirm"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"/>

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:src="@drawable/icon_smile"
        app:layout_constraintBottom_toTopOf="@+id/appCompatTextView1"
        app:layout_constraintStart_toEndOf="@+id/appCompatTextView2" />

</androidx.constraintlayout.widget.ConstraintLayout>